--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-
+        <div class="banner">
+            <div class="banner-content">
+         <h2 class="banner-title">Let's make beautiful flowers a part of your life.</h2>
+         <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+         <button class="btn-primary">Shop Now</button>   
+        </div>
+        <img class="banner-pic" src="Flower Asset/pngwing 10.png" alt="">
+    </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
