added the contact section

--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
             
         </div>
         <ul>
-            <li class="ul-text1">Pink Flower Tree</li>
-            <li class="ul-text2">Pink Flower Tree</li>
-            <li class="ul-text3">Pink Flower Tree</li>
+            <li class="ul-text1">Lili Flower</li>
+            <li class="ul-text2">Red Flower</li>
+            <li class="ul-text3">Yellow Flower</li>
         </ul>
-        <div>
+        <div class="mid-section">
             <div>
-                <img src="" alt="">
-                <p></p>
+                <img src="./Flower Asset/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <p></p>
+                <img src="./Flower Asset/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <p></p>
+                <img src="./Flower Asset/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
             </div>
         </div>
     </main>
