--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                  <p class="paragraph">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
          <button class="btn-primary">Shop Now</button>    
         </div>
-        <div class="banner-pic">
+          <div class="banner-pic">
             <img  src="Flower Asset/pngwing 10.png" alt="">
-        </div>
+          </div>
     </div>
     </header> 
     <main class="main-section">
@@ -68,6 +68,14 @@
                 <p>24/7 Free Support.</p>
             </div>
         </div>
+        <section class="offer">
+            <div class="offer-content">
+                <h3 class="offer-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h3>
+                <p class="offer-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <img src="./Flower Asset/pngwing 8.png" alt="">
+        </section>
     </main>
     <footer>
 
