--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
             </div>
             <img src="./Flower Asset/pngwing 8.png" alt="">
         </section>
+        <section>
+            <div>
+            <h3 class="insta">Instagram</h3>
+            <p class="insta-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="insta-img">
+               <img src="./Flower Asset/Flower 01.png" alt="">
+               <img src="./Flower Asset/Rectangle 4.png" alt="">
+               <img src="./Flower Asset/Rectangle 5.png" alt="">
+               <img src="./Flower Asset/Rectangle 6.png" alt="">
+           </div>
+        </section>
     </main>
     <footer>
 
