--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
         </section>
     </main>
     <footer>
-
+           <div class="footer">
+            <h3 class="footer-title"><span class="text-primary">Flower</span>Shop</h3>
+            <p class="footer-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p class="copyright">&copy; 2020-2023 flowershop.com. All rights reserved</p>
+           </div>
     </footer>
 </body>
 </html>
