finished all section part by part

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
                <img src="./Flower Asset/Rectangle 6.png" alt="">
            </div>
         </section>
+        <section>
+            <div class="deal">
+                <h3 class="deal-section">Get The Latest Deals</h3>
+                <p class="deal-text">$30 coupon for first shopping</p>
+                <input class="input-mail" type="input" placeholder="Enter your email here...">
+                <button class="button">Subscribe</button>
+            </div>
+        </section>
     </main>
     <footer>
            <div class="footer">
